--- a/emacs/.emacs.d/config.org
+++ b/emacs/.emacs.d/config.org
@@ -179,7 +179,7 @@ file full time.
 
 When the question is raised, why use Emacs, one of the popular answers
 is the Magit package. Magit is described as a porcelain (not sure
-why!), but all I know is that it is a way of doing all the Git type
+why), but all I know is that it is a way of doing all the Git type
 actions that you might want to do within the text editor itself. The
 configuration below installs the Magit package and makes the key
 mapping to access the Magit functions 'C-x g'. Magit is a menu driven
@@ -237,8 +237,8 @@ configures a few popular Helm specific activities:
 - Helm 'Recent Files': S-<F10>
 
 It is worth considering highlighting these keys in a Conky template at
-some point, otherwise I will never use them! Checking just now, they
-do all work as expected!
+some point, otherwise I will never use them. Checking just now, they
+do all work as expected.
 
 #+begin_src emacs-lisp
   ;; Activate helm, the filtering function.
@@ -252,7 +252,7 @@ do all work as expected!
     (helm-autoresize-mode))
 #+end_src
 
-Practice makes perfect when it comes to using Helm. Use it and gain familiarity!
+Practice makes perfect when it comes to using Helm. Use it and gain familiarity.
 
 ** Aesthetics Settings.
 
@@ -270,7 +270,7 @@ usage through the keyboard.
   (menu-bar-mode 0)			; no menu bar
   (tool-bar-mode 0)			; no tool bar
   (blink-cursor-mode 0)			; steady cursor rather than blinking
-  (scroll-bar-mode 0)			; no scroll bar... save the real estate
+  (scroll-bar-mode 0)			; no scroll bar. Save the real estate
   (display-battery-mode 1)			; battery info in the mode line.
 #+end_src
 
@@ -288,7 +288,7 @@ even if I run Emacs as a standalone instantiation. The following
 switches off the splash screen.
 
 #+begin_src emacs-lisp
-  ;; Splash screen be gone!
+  ;; Splash screen be gone.
   (setq inhibit-startup-message t)
 #+end_src
 
@@ -339,7 +339,7 @@ development repository for the theme here:
 
 https://github.com/catppuccin/emacs
 
-But it is also in the Melpa repositories, so can be installed using
+However, it is also in the Melpa repositories, so can be installed using
 the same use-package commands.
 
 #+begin_src emacs-lisp
@@ -429,7 +429,7 @@ installed and configured separately. Once it is running it can be
 configured to different levels of transparency.
 
 #+begin_src emacs-lisp
-  ;; Transparency - super groovy!
+  ;; Transparency - super groovy.
   (set-frame-parameter (selected-frame) 'alpha '(80 50))
   (add-to-list 'default-frame-alist '(alpha 80 50))
 #+end_src
@@ -971,8 +971,8 @@ Then I saw adverts for the Freewrite Traveller device. This is a full
 size mechanical keyboard with a clamshell lid which contains an e-ink
 screen to display the text as you write it. The device has wifi
 connectivity and the ability to write out your text to either Dropbox
-or GoogleDrive. Unfortunately it also had what felt like a very hefty
-price tag.
+or GoogleDrive. Unfortunately it also had what felt like a hefty price
+tag.
 
 Searching for an alternative device, I discovered the Alphasmart
 Neo2. This is a simple keyboard with an LCD screen to display the text
@@ -981,34 +981,34 @@ aimed as school classrooms which explains its robustness and the fact
 that it was provided with some language learning tools. The biggest
 advantage of these devices is that, thanks to their robustness, there
 are still a lot around, and they can be picked up on eBay for a
-reasonable sum. It is important to highlight that they are very
-simplistic compared to the Freewrite, having to built-in wifi
-function, and being designed mainly to transfer files to a 'proper'
-computer by being connected to the computer using an USB cable at
-which point the Alphasmart Neo2 becomes an external keyboard, typing
-the text again into a suitably provided document on the computer. This
-approach is fraught with many problems because of the temptation to
-forget that the typing process is taking place, and move to a
-different window, which will continue to receive the output that
-should have been placed in the relevant text file. The other issue
-that I had with my Neo2 is far more arcane and related to the fact
-that I'm a Dvorak keyboard layout user. Neo2 can be switched to use a
-Dvorak layout, which is extremely useful for me as I can touchtype
-using Dvorak, but not Qwerty. The Dvorak in question isn't perfect for
-my use as I usually use the UK Punctuation variation of Dvorak
-provided on Linux (includes the £ sign), with a swapped Caps Lock and
-left hand Ctrl key pair, but it is close enough. However, when using
-the text transference method where the typing is repeated, the Dvorak
-layout had another weird effect. The way that the external typing
-worked was to send the key position for the character that it wanted
-to send, not the character. So the a and m keys are the same on both
-layouts, but everything else is different. I initially started working
-around this by using the Linux 'tr' command which can be used to
-process text using a 1-2-1 character mapping. However, I then
-discovered that there is an open source project that provides a tool
-for hoovering the text files from the Neo2 as text, and therefore the
-Dvorak doesn't end up being an issue. This is done using a Python3
-script 'neotools'. May add more details on this when I next use it.
+reasonable sum. It is important to highlight that they are simplistic
+compared to the Freewrite, having to built-in wifi function, and being
+designed mainly to transfer files to a 'proper' computer by being
+connected to the computer using an USB cable at which point the
+Alphasmart Neo2 becomes an external keyboard, typing the text again
+into a suitably provided document on the computer. This approach is
+fraught with many problems because of the temptation to forget that
+the typing process is taking place, and move to a different window,
+which will continue to receive the output that should have been placed
+in the relevant text file. The other issue that I had with my Neo2 is
+far more arcane and related to the fact that I'm a Dvorak keyboard
+layout user. Neo2 can be switched to use a Dvorak layout, which is
+extremely useful for me as I can touchtype using Dvorak, but not
+Qwerty. The Dvorak in question isn't perfect for my use as I usually
+use the UK Punctuation variation of Dvorak provided on Linux (includes
+the £ sign), with a swapped Caps Lock and left hand Ctrl key pair, but
+it is close enough. However, when using the text transference method
+where the typing is repeated, the Dvorak layout had another weird
+effect. The way that the external typing worked was to send the key
+position for the character that it wanted to send, not the
+character. So the a and m keys are the same on both layouts, but
+everything else is different. I initially started working around this
+by using the Linux 'tr' command which can be used to process text
+using a 1-2-1 character mapping. However, I then discovered that there
+is an open source project that provides a tool for hoovering the text
+files from the Neo2 as text, and therefore the Dvorak doesn't end up
+being an issue. This is done using a Python3 script 'neotools'. May
+add more details on this when I next use it.
 
 Finally, I have backed a project on Kickstarter for a device called
 Byok which is a small device that you connect your own keyboard to (it
@@ -1207,6 +1207,50 @@ Mode. The notes will be saved in the folder ~/remember.
 There is a makefile-mode built-in in Emacs, so there is no necessity
 for adding an extra setting at this time. However, this is where that
 stuff would go if or when required.
+
+I often end up googling for the format for Makefile files, so here is
+a quick overview of the format.
+
+Consider the situation where I have a source file called hello.c (the
+standard 'hello world!' program) which I want to compile to create a
+binary called hello. The entry for Makefile requires a label for the
+compilation process, followed by a colon, then the compilation
+command. The simplest entry would be:
+
+hello:
+      gcc hello.c -o hello
+
+The most common addition to the command for the compilation is the
+flag to generate and show any warnings that arise.
+
+hello:
+      gcc -Wall hello.c -o hello
+
+The advantage of using this Makefile approach is that you can then run
+the compilation using the compile command within Emacs as follows:
+
+M-x compile
+
+This will generate the entry:
+
+make -k
+
+and the label text can then be added to the end of the command. Again,
+in this case:
+
+make -k hello
+
+A second pane will open to display the output of the compilation
+process. Running the code can either be done from a terminal or by
+opening 'eshell' to create a terminal without leaving Emacs.
+
+There are lots of other things that can be done using the Makefile,
+such as cleaning files that aren't required or are left over from
+previous compilation processes.
+
+What I don't know is how to force a recompilation when the source file
+is updated. A google indicates that adding -B switch causes a full
+rebuild.
 *** Lisp/Clojure.
 
 
